Arquitectura de Microservicios - TFG/istio/Rules/Virtual-service/Canary Releases/virtual-service-empleado-90-10.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: empleado
spec:
  hosts:
  - empleado
  http:
  - route:
    - destination:
        host: empleado
        subset: version-v1
      weight: 90
    - destination:
        host: empleado
        subset: version-v2
      weight: 10
